--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
     <textarea id="text-input"></textarea>
     <p id="char-count">Character Count: 0/50</p>
 
+    <div class="display-container">
+        <p class="display-text"></p>
+    </div>
+
     <script src="index.js"></script>
 </body>
 
